--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,16 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{margin: 0px;
+  padding: 0px;
+   box-sizing: border-box;}
+
+div{
+  height: 150px;
+  width: 450px;
+  margin: auto;
+  margin-top: 200px;
+  border: 0px rgb(18, 44, 11) solid;
+  background-color: rgb(221, 245, 136);
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body{
+  background-color: aliceblue;
 }
